--- a/chomper/templates/chomper/googlemaps.html
+++ b/chomper/templates/chomper/googlemaps.html
@@ -3,6 +3,9 @@
     {% include 'chomper/base.html' %}
 	{% load leaflet_tags %}
 	{% load geojson_tags %}
+    <head>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places&key=AIzaSyCUSkUaTU4DJhuheYoh3_x2y1BBD40N3yc"></script>
+    </head>
     <style>
     body{
         height: 100vh;
@@ -396,6 +399,55 @@
 
 
 		<script type="text/javascript">
+
+        function initialize() {
+
+            var origin_input = document.getElementById('origin-loc');
+
+            var destination_input = document.getElementById('destination-loc');
+
+            var options = {
+              types: ['establishment']
+            };
+
+            var autocomplete_origin = new google.maps.places.Autocomplete(origin_input, options);
+            var autocomplete_destination = new google.maps.places.Autocomplete(destination_input, options);
+            autocomplete_origin.addListener('place_changed', fillInAddress);
+            autocomplete_destination.addListener('place_changed', fillInAddress);
+
+            function fillInAddress() {
+              // Get the place details from the autocomplete object.
+              var origin_place = autocomplete_origin.getPlace();
+              var destination_place = autocomplete_destination.getPlace();
+
+
+
+                console.log(origin_place);
+{#                console.log(place.address_components[3].long_name);#}
+
+{#                $("#searchName").val(place.name);#}
+{#                var address = place.address_components[0].short_name + ' ' + place.address_components[1].short_name;#}
+{#                $("#searchAddress").val(address);#}
+{#                $("#searchCity").val(place.address_components[3].long_name);#}
+{#                $("#searchNeighborhood").val(place.address_components[2].short_name);#}
+{#                $("#searchURL").val(place.url);#}
+{##}
+{#                if (place.address_components[4].types[0] = 'administrative_area_level_1') {#}
+{#                    $("#searchState").val(place.address_components[4].short_name);#}
+{#                }#}
+{#                else {#}
+{#                    $("#searchState").val(place.address_components[5].short_name);#}
+{#                }#}
+
+            }
+
+        }
+
+
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+
+
 
         function showModal(id) {
             $("#myModal").modal();
