UI tweaks, search optimization updates

--- a/chomper/templates/chomper/googlemaps.html
+++ b/chomper/templates/chomper/googlemaps.html
@@ -134,7 +134,7 @@
                             </a>
                         </div>
                         <div class="col-sm-8 col-md-8 text-center" style="font-size:14px">
-                                You are viewing <strong>{{ datum.numrest }}</strong> {{ datum.establishment }} between <strong>{{ datum.origin }}}</strong> and <strong>{{ datum.destination }}}.</strong>
+                                You are viewing <strong>{{ datum.numrest }}</strong> {{ datum.establishment }} between <strong>{{ datum.origin }}</strong> and <strong>{{ datum.destination }}.</strong>
                             <br>
                                 Traveling via <strong>{{ datum.mode }}</strong>, you are about <strong>{{ datum.duration }}</strong> away from this point.
                             <a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" id="topbar-toggle-off" style="font-size:11px"><span class="glyphicon glyphicon-triangle-top"></span>(Hide Details)</a>
